minor change in wording

--- a/Compound interest/index.html
+++ b/Compound interest/index.html
@@ -65,7 +65,7 @@
             <span>%</span>
             <label for="interest"> </label> <br>
     
-            <label for="time">Time Period: </label>
+            <label for="time">Time Cycle: </label>
             <input type="number" id="time" class="userInput"> 
             <label for="time"></label> <br>
     
