modify token selection method

--- a/poker/index.html
+++ b/poker/index.html
@@ -67,8 +67,7 @@
         </div>
     </div>
 
-    <div class="area">
-        <input type="number" name="bet" id="bet"> 
+    <div class="area" id="action">
         <button class="bet">Make A Bet!</button>
         <button class="next">Next Step</button>
         <!---->
