--- a/poker/index.html
+++ b/poker/index.html
@@ -9,9 +9,9 @@
 
   <header>
         <h1>Single-player Poker Card Game</h1>
-        <p>Player's cards can be flipped by clicking any time during the game. 
-            Players take turns betting tokens by selecting tokens and pressing the 'Make Bet!' button. 
-            After each player has taken a turn, press the 'Next Step' button to flip common cards and continue the next round. </p>
+        <p>Player's cards can be flipped by clicking any time during the game. </p>
+        <p>Players take turns betting tokens by selecting tokens and pressing the 'Make Bet!' button. </p>
+        <p>After each player has taken a turn, press the 'Next Step' button to flip common cards and continue the next round.</p>
         <!--
         <h2>Token Values: </h2>
         <div class="legend">
@@ -57,7 +57,6 @@
         <div class="table cards">
             <h2>Player's cards: </h2>
         </div>
-
         <div class="table tokens">
             <h2>Player's tokens: </h2>
             <!--<img src="token_5.svg" alt="token" class="token _5 player">-->
