add fold mechanism, end game early if one folds

--- a/poker/index.html
+++ b/poker/index.html
@@ -12,6 +12,7 @@
         <p>Player's cards can be flipped by clicking any time during the game. </p>
         <p>Players take turns betting tokens by selecting tokens and pressing the 'Make Bet!' button. </p>
         <p>After each player has taken a turn, press the 'Next Step' button to flip common cards and continue the next round.</p>
+        <pre id="evalMsg">      </pre>
         <!--
         <h2>Token Values: </h2>
         <div class="legend">
@@ -64,6 +65,7 @@
     </div>
 
     <div class="area action" id="player1">
+        <button class="fold">Fold</button>
         <button class="bet">Make A Bet!</button>
     </div>
 
@@ -80,6 +82,7 @@
     </div>
 
     <div class="area action" id="player2">
+        <button class="fold">Fold</button>
         <button class="bet">Make A Bet!</button>
     </div>
     
