--- a/poker/index.html
+++ b/poker/index.html
@@ -8,10 +8,12 @@
   </head>
 
   <header>
-        <h1>Single-player Poker Card Game</h1>
+        <h1>Two-player Poker Card Game</h1>
         <p>Player's cards can be flipped by clicking any time during the game. </p>
         <p>Players take turns betting tokens by selecting tokens and pressing the 'Make Bet!' button. </p>
         <p>After each player has taken a turn, press the 'Next Step' button to flip common cards and continue the next round.</p>
+        <h2>Simplified rules:</h2>
+        <p>Each player will take turns making the first bet in a game.</p>
         <pre id="evalMsg">      </pre>
         <!--
         <h2>Token Values: </h2>
