add reset game after 1 round

--- a/poker/index.html
+++ b/poker/index.html
@@ -54,6 +54,7 @@
 
     <div class="area action" id="common">
         <button class="next">Next Step</button>
+        <button class="reset">Reset Game</button>
     </div>
 
     <!--Player 1 Container-->
