modify poker page, begin remote sever tutorial

--- a/poker/index.html
+++ b/poker/index.html
@@ -9,11 +9,15 @@
 
   <header>
         <h1>Two-player Poker Card Game</h1>
-        <p>Player's cards can be flipped by clicking any time during the game. </p>
-        <p>Each game consists of 4 rounds, where the first round has no cards flipped. In each round, players take turns making a bet, then common cards are revealed. </p>
-        <p>In each player's turn, the player can click to view their cards. Players bet tokens by selecting tokens and pressing the 'Make Bet!' button. </p>
-        <p>After each player has taken a turn, press the 'Next Step' button to flip common cards and proceed to the next round.</p>
-        <h2>Simplified rules:</h2>
+        <h3>Instructions: </h3>
+        <ul>
+            <li>Player's cards can be flipped by clicking any time during the game.</li>
+            <li>Each game consists of 4 rounds, where the first round has no cards flipped. In each round, players take turns making a bet, then common cards are revealed.</li>
+            <li>In each player's turn, the player can click to view their cards. Players bet tokens by selecting tokens and pressing the 'Make Bet!' button. </li>
+            <li>After each player has taken a turn, press the 'Next Step' button to flip common cards and proceed to the next round.</li>
+            <li>After collecting tokens, press 'Reset Game' to start a new game.</li>
+        </ul>
+        <h3>Simplified rules:</h3>
         <p>For each turn, there are maximum two cycles. During the first cycle through all the players, raises are allowed. In the second cycle (if needed), only matches are allowed. </p>
         <pre id="evalMsg">      </pre>
         <!--
