save chat history

--- a/tutorial-nodejs/chat.html
+++ b/tutorial-nodejs/chat.html
@@ -27,6 +27,7 @@
     var form = document.getElementById('form');
     var input = document.getElementById('input');
 
+    // listen to submit message to server
     form.addEventListener('submit', function(e) {
       e.preventDefault();
       if (input.value) {
