update multiplayer rules

--- a/poker/index.html
+++ b/poker/index.html
@@ -19,6 +19,8 @@
         </ul>
         <h3>Simplified rules:</h3>
         <p>For each turn, there are maximum two cycles. During the first cycle through all the players, raises are allowed. In the second cycle (if needed), only matches are allowed. </p>
+        <h3>Multiplayer rules:</h3>
+        <p>Play order is determined by the order of users entering their username. Play order will be cycled in new games.</p>
         <pre id="evalMsg">      </pre>
 
   </header>
