--- a/poker/index.html
+++ b/poker/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <!--Player 2 Container-->
-    <div class="area player" id="player2">
+<!--     <div class="area player" id="player2">
         <div class="table cards">
             <h2>Player's cards: </h2>
         </div>
@@ -81,7 +81,7 @@
     <div class="area action" id="player2">
         <button class="fold">Fold</button>
         <button class="bet">Make A Bet!</button>
-    </div> 
+    </div>  -->
     
   </body>
 
@@ -100,8 +100,6 @@
                 console.log('my username', username);
             } while (username===null);
             player.name = username;
-            console.log('username entered');
-            console.log(player);
             socket.emit('player ready', player); // only push properties e.g. username
         })
         
@@ -113,10 +111,7 @@
         socket.on('deal common cards', (commonCards)=>{
             let msg = document.querySelector('#evalMsg');
             msg.textContent = 'Dealing cards';
-            console.log('user receive common cards');
-            console.log(commonCards);
             player.setCommonCards(commonCards);
-            console.log('user set common cards')
         })
 
     });
