--- a/poker/index.html
+++ b/poker/index.html
@@ -99,8 +99,8 @@
                 var username = window.prompt('Please enter a username');
                 console.log('my username', username);
             } while (username===null);
-            player.name = username;
-            socket.emit('player ready', player); // only push properties e.g. username
+            player.username = username;
+            socket.emit('player ready', player); // pushing player only pushes properties e.g. username
         })
         
         socket.on('waiting', ()=>{
@@ -110,9 +110,17 @@
 
         socket.on('deal common cards', (commonCards)=>{
             let msg = document.querySelector('#evalMsg');
-            msg.textContent = 'Dealing cards';
+            msg.textContent = 'Dealing common cards';
             player.setCommonCards(commonCards);
         })
+
+        socket.on('deal player cards', (playerCards)=>{
+            let msg = document.querySelector('#evalMsg');
+            msg.textContent = 'Dealing player cards';
+            player.setPlayerCards(playerCards);
+        })
+
+        socket.on('print', (msg)=>console.log(msg))
 
     });
     //? Add this so that page finish loading before asking username
