--- a/poker/index.html
+++ b/poker/index.html
@@ -109,14 +109,12 @@
         })
 
         socket.on('deal common cards', (commonCards)=>{
-            let msg = document.querySelector('#evalMsg');
-            msg.textContent = 'Dealing common cards';
             player.setCommonCards(commonCards);
         })
 
         socket.on('deal player cards', (playerCards)=>{
             let msg = document.querySelector('#evalMsg');
-            msg.textContent = 'Dealing player cards';
+            msg.textContent = 'Dealing cards';
             player.setPlayerCards(playerCards);
         })
 
