--- a/poker/index.html
+++ b/poker/index.html
@@ -118,6 +118,12 @@
             player.setPlayerCards(playerCards);
         })
 
+        socket.on('play once', (game, isFirstPlayer)=>{
+            //! setup button listeners
+            let newHighestBet = player.makeBet(game, isFirstPlayer)
+            //! remove button listeners
+        })
+
         socket.on('print', (msg)=>console.log(msg))
 
     });
