make game global

--- a/poker/index.html
+++ b/poker/index.html
@@ -120,6 +120,7 @@
         })
 
         socket.on('play once', (game, isFirstPlayer)=>{
+            console.log('start playing')
             //! setup button listeners
 
             // continue to make bet until successfull
