--- a/poker/index.html
+++ b/poker/index.html
@@ -123,6 +123,8 @@
 
         socket.on('play once', (game, isFirstPlayer)=>{
             console.log('start playing')
+            let msg = document.querySelector('#evalMsg');
+            msg.textContent = 'You are playing now!';
             //! setup bet button listeners
             player.betBtn.addEventListener('click', betAction, {once: true})
 
@@ -132,6 +134,7 @@
                 console.log(selectedTokenValues, sum, success)
                 console.log("success", success);
                 if (success){
+                    console.log('emit to server')
                     //player.betBtn.removeEventListener('click', betAction);
                     //player.container.classList.remove('playing');
                     socket.emit('made bet', selectedTokenValues, sum);
