flip common cards on client side

--- a/poker/index.html
+++ b/poker/index.html
@@ -158,8 +158,17 @@
                 player.receiveBet(selectedTokenValues);
             })
 
-            socket.on('flip common cards',(indices)=>{
-                player.flipCommonCards(indices);
+            socket.on('flip common cards',()=>{
+                let endGame = player.flipCommonCards();
+                if (!endGame) {
+                    socket.emit('start round');
+                } else {
+                    // Wait to display all cards for a while before ending game
+                    setTimeout(()=>{
+                        socket.emit('end game');
+                    }, 2000);
+                }
+                
             })
 
             socket.on('display evalMsg',(evalMsg)=>{
