--- a/poker/index.html
+++ b/poker/index.html
@@ -176,6 +176,7 @@
             })
 
             socket.on('collect tokens', (collectTokenValues)=>{
+                console.log('collecting tokens', collectTokenValues)
                 collectTokenValues.forEach(value=>{
                     player.addToken(value); // add token to table
                     player.tokens[value]? this.tokens[value] ++ : this.tokens[value] = 1; // update token frequency
