--- a/poker/index.html
+++ b/poker/index.html
@@ -178,6 +178,7 @@
             socket.on('collect tokens', (collectTokenValues)=>{
                 console.log('collecting tokens', collectTokenValues)
                 collectTokenValues.forEach(value=>{
+                    player.money += value; // update player money
                     player.addToken(value); // add token to table
                     player.tokens[value]? this.tokens[value] ++ : this.tokens[value] = 1; // update token frequency
                 });
